better api + fixes
